--- a/index.css
+++ b/index.css
@@ -11,6 +11,15 @@
     display: flex;
     justify-content:center;
     padding-top: 30px;
+    background-color: azure;
+    border: 1px;
+    border-radius: 5px;
+    padding-top:0 ;
+    margin-top:30px;
+    padding-left: 10px;
+
+
+    /* need to fix */
 
 
 /* willl use this latet */
