--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 #head{
     text-decoration: none;
     color: rgb(0, 0, 0);
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: xx-large;
     display: flex;
     justify-content:center;
