--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
     padding-top: 30px;
     background-color: azure;
     border: 1px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     padding-top:0 ;
     margin-top:30px;
     padding-left: 10px;
@@ -57,5 +57,32 @@ main{
     justify-content: center;
     padding-top: 40px;
     font-family: 'Courier New', Courier, monospace;
+    position: sticky;
 
+}
+#IMAGE{
+    color: aliceblue;
+    display: flex;
+    justify-content:center;
+    border: white 5px solid;
+    border-radius: 5px;
+    transform: translateY(100px);
+    transform:translateX(50px);
+    padding-left: 0;
+    padding-right:0 ;
+    width: max-content;
+    
+}
+#link{
+    text-decoration: none;
+    color:rgb(199, 192, 163);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: solid whitesmoke 2px;
+    border-radius: 3px;
+    white-space: nowrap;
+    display: flex;
+    width: max-content;
+    transform: translate(730px , 750px);
+    font-size: x-large;
+    
 }
