--- a/index.css
+++ b/index.css
@@ -65,12 +65,13 @@ main{
     display: flex;
     justify-content:center;
     border: white 5px solid;
-    border-radius: 5px;
+    border-radius: 50%;
     transform: translateY(100px);
     transform:translateX(50px);
     padding-left: 0;
     padding-right:0 ;
     width: max-content;
+    /* clip-path: circle(); */
     
 }
 #link{
@@ -82,7 +83,20 @@ main{
     white-space: nowrap;
     display: flex;
     width: max-content;
-    transform: translate(40vw , 60vw);
     font-size: x-large;
+    transform: translate(39vw , 65vw);
     
+}
+
+#link2{
+    text-decoration: none;
+    color:rgb(199, 192, 163);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: solid whitesmoke 2px;
+    border-radius: 3px;
+    white-space: nowrap;
+    display: flex;
+    width: max-content;
+    font-size: x-large;
+    transform: translate(49vw , 62.31vw);
 }
