--- a/index.css
+++ b/index.css
@@ -78,13 +78,15 @@ main{
     text-decoration: none;
     color:rgb(199, 192, 163);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border: solid whitesmoke 2px;
+    /* border: solid whitesmoke 2px; */
     border-radius: 3px;
     white-space: nowrap;
     display: flex;
     width: max-content;
     font-size: x-large;
-    transform: translate(39vw , 12.6vw);
+    transform: translate(35vw , 4.3vw);
+    font-weight: 200;
+    font-size: xx-large;
     
 }
 
@@ -92,13 +94,15 @@ main{
     text-decoration: none;
     color:rgb(199, 192, 163);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border: solid whitesmoke 2px;
+    /* border: solid whitesmoke 2px; */
     border-radius: 3px;
     white-space: nowrap;
     display: flex;
     width: max-content;
     font-size: x-large;
-    transform: translate(49vw , 10vw);
+    transform: translate(51vw , 1vw);
+    font-weight: 200;
+    font-size: xx-large;
 }
 #image{
   height: 100vh;
@@ -106,6 +110,7 @@ main{
   display: flex;
   justify-content:  center;
   align-items: center;
+  transform: translateY(-10vw);
   margin: 0;
   padding: 0;
 }
@@ -114,5 +119,30 @@ main{
     width: 300px;
     border-radius: 50%;
     border: 10px solid rgb(79, 71, 71);
+
+}
+#intro{
+    color: rgb(107, 117, 125);
+    word-wrap:unset;
+    width: 350px;
+    font-size: larger;
+    font-family:monospace ;
+    transform: translate(100px , 250px);
+    
+
+}
+#link3{
+    text-decoration: none;
+    color:#566f73;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* border: solid whitesmoke 2px; */
+    border-radius: 3px;
+    white-space: nowrap;
+    display: flex;
+    width: max-content;
+    font-size: x-large;
+     transform: translate(43vw, -30vw);
+    font-weight: 200;
+    font-size: xx-large;
 
 }
